finished all methods but will test with junit